--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@layer components {
+  .tag {
+    @apply rounded-sm inline-block p-2 text-cyan font-bold bg-light-grayish-cyan-background cursor-pointer hover:bg-cyan hover:text-white
+  }
+}
